--- a/src/app/Componentes/detalles/detalles.component.html
+++ b/src/app/Componentes/detalles/detalles.component.html
@@ -1,5 +1,8 @@
+<div class='text-white float-end' *ngIf='!wantLogin'>
+    <b class='m-2 px-4 p-2 bg-primary rounded mb-4' (click)='showQR()'>Iniciar con QR</b>
+</div>
 
-<div class='container shadow p-3 mb-5 bg-body rounded'>
+<div class='container shadow p-3 my-5 bg-body rounded'>
     <div class='m-4'>
         <h5><b>Nivel de Agua</b></h5>
         <div class='my-3'>
@@ -28,9 +31,13 @@
     </div>
 </div>
 
-<qr-code [value]='user' level='H' [size]='100'>datos user</qr-code>
-<qr-code [value]='cadena' level='H' [size]='150'>Room</qr-code>
-{{cadena}}
+<div class='text-white rounded' *ngIf='wantLogin' (click)='hideQR()'>
+    <b class='m-2 px-4 p-2 bg-primary'>X</b>
+</div>
+<div class='d-flex bg-primary p-2' *ngIf='wantLogin'>
+        <qr-code class='m-2' [value]='user' level='H' [size]='150'></qr-code>
+        <p class='mx-2 my-auto text-white'><b>Escane el codigo QR con la aplicacion para iniciar sesion</b></p>
+</div>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
