se agrego funcionalidad a los botones de regado en la pagina de detalle, se soluciono un error del httprequest, se agregaron rutas para el control de la raspberry

--- a/src/app/Componentes/pagina-principal/pagina-principal.component.html
+++ b/src/app/Componentes/pagina-principal/pagina-principal.component.html
@@ -4,7 +4,7 @@
             <a class='nav-link text-white'>Login</a>
         </li>
         <li class='nav-item' routerLink='Registro' routerLinkActive='active' *ngIf='!logeado'>
-            <a class='nav-link text-white'>Registrar</a>
+            <a class='nav-link text-white'>Sing Up</a>
         </li>
         <li class='nav-item' *ngIf='logeado'>
             <a class='nav-link text-white' routerLink='Detalle' routerLinkActive='active'>Inicio</a>
