--- a/src/app/Componentes/detalles/detalles.component.html
+++ b/src/app/Componentes/detalles/detalles.component.html
@@ -20,14 +20,17 @@
                 role="progressbar" [style.width.%]="nivelPila" 
                 aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{nivelPila}}%</div>
             </div>
-            {{nivelPila}}
         </div>
-        <button class='btn btn-primary mt-4' data-bs-toggle="modal" data-bs-target="#exampleModal">Llenar</button>
+        <button class='btn btn-primary mt-4' *ngIf='!flagLlenado' data-bs-toggle="modal" data-bs-target="#exampleModal">Llenar</button>
+        <button class='btn btn-danger mt-4' *ngIf='flagLlenado' (click)='cancelLlenadoP()'>Cancelar</button>
+        <button class='btn btn-success mt-4 mx-4' (click)='checkLlenado()'>Refrescar</button>
     </div>
     <div class='m-4'>
         <h5><b>Humedad de la Tierra</b></h5>
-        <h4>humedad</h4>
-        <button class='btn btn-primary mt-4'>Regar</button>
+        <h4>{{nivelHumedad}}%</h4>
+        <button class='btn btn-primary mt-4' (click)='regar()' *ngIf='!flagRegado'>Regar</button>
+        <button class='btn btn-danger mt-4' (click)='cancelRegado()' *ngIf='flagRegado'>Cancelar</button>
+        <button class='btn btn-success mt-4 mx-4' (click)='checkRegado()'>Refrescar</button>
     </div>
 </div>
 
@@ -57,7 +60,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-            <button type="button" class="btn btn-primary" (click)='llenar()'>Aceptar</button>
+            <button type="button" class="btn btn-primary" (click)='llenar()' data-bs-dismiss="modal">Aceptar</button>
         </div>
         </div>
     </div>
